media queries and README changes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="/CSS/style.css" />
+		<link rel="stylesheet" href="/CSS/queries.css" />
 		<title>Document</title>
 	</head>
 	<body>
 		<div class="container">
+			<!-- navbar  -->
+
 			<nav class="navbar">
 				<div class="logo">
 					<img src="./Images/white-logo.png" alt="logo" />
@@ -25,35 +28,53 @@
 					</div>
 				</ul>
 			</nav>
+
+			<!-- navbar underline -->
+
 			<div class="line"></div>
-			<div class="hero-section-left">
-				<h1 class="main-text">
-					Interior Design That <br />
-					Care About Details
-				</h1>
-				<button class="button">Learn More</button>
-			</div>
-			<div class="hero-section-right">
-				<div class="square">
-					<img
-						src="./Interior Design Landing Page/puzzle-piece-solid.svg"
-						alt="puzzle-piece-solid"
-					/>
-					<p>We create your space better <br />based on your own idea</p>
+
+			<!-- hero-section -->
+			<div class="hero-section">
+				<!-- hero-section-left -->
+				<div class="hero-section-left">
+					<h1 class="main-text">
+						Interior Design That <br />
+						Care About Details
+					</h1>
+					<button class="button">Learn More</button>
 				</div>
 
-				<div class="line-1"></div>
-				<div class="circle"></div>
-				<div class="square-1">
-					<img
-						src="./Interior Design Landing Page/lightbulb-solid.svg"
-						alt="lightbulb-solid"
-					/>
-					<p>Inovation ideas,stylish <br />design for home & Business</p>
-				</div>
+				<!-- hero-section-right -->
 
-				<div class="line-2"></div>
-				<div class="circle-2"></div>
+				<div class="hero-section-right">
+					<div class="box-1">
+						<div class="square-1">
+							<img
+								src="./Interior Design Landing Page/puzzle-piece-solid.svg"
+								alt="puzzle-piece-solid"
+							/>
+							<p>We create your space better <br />based on your own idea</p>
+						</div>
+						<div class="align-1">
+							<div class="line-1"></div>
+							<div class="circle-1"></div>
+						</div>
+					</div>
+
+					<div class="box-2">
+						<div class="square-2">
+							<img
+								src="./Interior Design Landing Page/lightbulb-solid.svg"
+								alt="lightbulb-solid"
+							/>
+							<p>Inovation ideas,stylish <br />design for home & Business</p>
+						</div>
+						<div class="align-2">
+							<div class="line-2"></div>
+							<div class="circle-2"></div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
